# docs/swagger.json
@@ -12,86 +12,6 @@
         }
     },
     "paths": {
-        "/addData": {
-            "post": {
-                "description": "Create new pdf from scratch",
-                "consumes": [
-                    "multipart/form-data"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "GeneratePDF1"
-                ],
-                "summary": "Create new pdf from scratch",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "name": "address",
-                        "in": "formData"
-                    },
-                    {
-                        "type": "string",
-                        "name": "name",
-                        "in": "formData"
-                    },
-                    {
-                        "type": "integer",
-                        "name": "phoneNumber",
-                        "in": "formData"
-                    },
-                    {
-                        "type": "integer",
-                        "name": "zipAddress",
-                        "in": "formData"
-                    },
-                    {
-                        "type": "array",
-                        "items": {
-                            "type": "string"
-                        },
-                        "description": "products",
-                        "name": "products",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "file",
-                        "description": "logo",
-                        "name": "logo",
-                        "in": "formData",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/addToTemplate": {
             "post": {
                 "description": "Create new pdf with positions",
@@ -218,9 +138,6 @@
         },
         "models.RawData": {
             "type": "object",
-            "required": [
-                "template"
-            ],
             "properties": {
                 "address": {
                     "$ref": "#/definitions/models.address"
